# rMonitor

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  SUPPORT.md  build.bat  build.rs
.github/workflows/: ci.yml
packaging/desktop/: pulse.desktop
scripts/: build.sh  release.sh  test.sh
src/: app.rs  bootstrap.rs  bootstrap_guards.rs  clipboard.rs  config.rs  config_tests.rs  diagnostics.rs  event_handler.rs  gpu_names.rs  helpers.rs  json.rs  logger.rs  logger_tests.rs  main.rs  metrics_format.rs  modals.rs  network_statuses.rs  reg.rs  tests_perf.rs  utils.rs  utils_tests.rs  win32.rs  win32_relaunch.rs
src/app/: keys.rs  metrics.rs  mod.rs  mouse.rs  power.rs  types.rs
src/backend/: config.rs  config_tests.rs  ebpf.rs  identity.rs  mod.rs  monitors.rs  registry.rs  registry_tests.rs  shell_terminal.rs  stub.rs  sys_info.rs  sys_info_tests.rs  sys_info_win.rs  sysinfo_shim.rs  win32.rs  window.rs
src/chrome/: app_state.rs  embedded_docs.rs  mod.rs
src/monitor_win32/: monitor_win32_win.rs
src/ui/: colors.rs  layout_guard.rs  layout_helpers.rs  markdown.rs  mod.rs  mouse_selection.rs  overlays.rs  scrollbar.rs  spring.rs  spring_tests.rs  status_bar.rs  text.rs  theme.rs  title_banner.rs  widgets.rs  widgets_net.rs
tests/: integration_test.rs
web/: index.html
