[package]
name = "pulse"
version = "2026.6.10-1"
edition = "2024"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["termwiz"] }
crossterm = "0.28"

serde_json = "1.0.150"

[target.'cfg(windows)'.dependencies]

windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Dwm",
    "Win32_UI_Accessibility",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[build-dependencies]
embed-resource = "2"

[package.metadata.deb]
name = "app-pulse"
maintainer = "Jeryd <jerydleuck@gmail.com>"
assets = [
    ["target/release/pulse", "usr/bin/pulse", "755"],
    ["assets/brand/app_icon.png", "usr/share/pixmaps/pulse.png", "644"],
    ["packaging/desktop/pulse.desktop", "usr/share/applications/pulse.desktop", "644"],
]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce codegen units to maximize size reduction
panic = "abort"          # Remove panic unwinding code
strip = true             # Strip symbols and debuginfo

[package.metadata.generate-rpm]
name = "app-pulse"
version = "2026.6.10-1"
release = "1"
arch = "x86_64"
summary = "app-pulse package"
description = "app-pulse package"
license = "MIT"
assets = [
    { source = "target/release/pulse", dest = "/usr/bin/pulse", mode = "755" },
    { source = "assets/brand/app_icon.png", dest = "/usr/share/pixmaps/pulse.png", mode = "644" },
    { source = "packaging/desktop/pulse.desktop", dest = "/usr/share/applications/pulse.desktop", mode = "644" }
]
